more efficient Integer.valueOf instead of "new Integer()" [findbugs]